@@ -317,7 +317,7 @@ namespace libtorrent
 	public:
 
 		torrent(aux::session_interface& ses, int block_size
-			, int seq, bool session_paused, add_torrent_params const& p
+			, bool session_paused, add_torrent_params const& p
 			, sha1_hash const& info_hash);
 		~torrent();
 
@@ -340,6 +340,7 @@ namespace libtorrent
 		{
 			TORRENT_ASSERT(m_added == true);
 			m_added = false;
+			set_queue_position(-1);
 			// make sure we decrement the gauge counter for this torrent
 			update_gauge();
 		}
@@ -450,7 +451,12 @@ namespace libtorrent
 		void set_queue_position(int p);
 		int queue_position() const { return m_sequence_number; }
 		// used internally
-		void set_queue_position_impl(int p) { m_sequence_number = p; }
+		void set_queue_position_impl(int const p)
+		{
+			if (m_sequence_number == p) return;
+			m_sequence_number = p;
+			state_updated();
+		}
 
 		void second_tick(int tick_interval_ms);
 
